OOR-CORS: Call DispatchDidFail even for local file sync XHR failures

Blink has a historical code not to call DispatchDidFail on local file
sync XHR failures, but it's wrong in terms of spec conformance.

After OOR-CORS is enabled, code path is changed, and the legacy
historical code does not run any more.

So, rather than adding the historical code again onto the OOR-CORS
code path, let me remove the historical code, and change the behavior
to conform the spec.

After this behavior changes, some tests fail, and all reasons are
tests were just wrong.

- NavigationDisableWebSecurityTest.ValidateBaseUrlForDataUrl
 Expected failed local file sync XHR didn't raise an exception.
 The test script is fixed in this change.

- fast/encoding/GBK/close-gbk-converter.html
 Ditto.

- fast/xmlhttprequest/xmlhttprequest-recursive-sync-event.html
 Ditto.

- fast/xmlhttprequest/set-dangerous-headers-local.html
 This was a dup of wpt/xhr/setrequestheader-header-forbidden.htm,
 and wrongly assuming it didn't raise an exception. Removed.

- fast/xmlhttprequest/xmlhttprequest-missing-file-exception.html
 A wrong test for the historical code that had made the WebKit
 work for the very old broken wikipedia page. Removed.


Bug: 909685
Change-Id: I46c63ef1ec014be3220285e70800b4b9b3dec32b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1353041
Reviewed-by: Yutaka Hirano <yhirano@chromium.org>
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Reviewed-by: Kent Tamura <tkent@chromium.org>
Auto-Submit: Takashi Toyoshima <toyoshim@chromium.org>
Commit-Queue: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#639861}
Former-commit-id: ff803c09369b53b0beb55bbe5339c1e5e5e42e1d